--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,8 @@
 <div class="nav-contain">
     <nav class="navigation">
         <ul>
-            <li><a href="/notes"><img src="/images/home.svg" alt="home icon"></a></li>
-            <li><a class="plus" href="/new-note">+</a></li>
+            <li class="left-link"><a href="/notes"><img src="/images/home.svg" alt="home icon"></a></li>
+            <li class="right-link"><a class="plus" href="/new-note"><img src="/images/plus.svg" alt="home icon"></a></li>
         </ul>
     </nav>
 </div>
