--- a/views/partials/trashcan.ejs
+++ b/views/partials/trashcan.ejs
@@ -1,1 +1,1 @@
-<div class="trashcan-wrapper"><a class="delete" data-del="<%= Notes._id %>"><img src="/images/trashcan.svg" alt="delete icon"></a></div>
+<div class="trashcan-wrapper"><a class="delete" data-del="<%= Note._id %>"><img src="/images/trashcan.svg" alt="delete icon"></a></div>
